[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/main_menu/bg/bg_panel.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/fonts/Monocraft.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/host_menu/df/label_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/host_menu/line_edit.tres" type="StyleBox" id=5]
[ext_resource path="res://src/ui/host_menu/HostMenu.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/host_menu/button/button_pressed.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/ui/host_menu/button/button_normal.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/ui/host_menu/button/button_hover.tres" type="StyleBox" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 9
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFont" id=6]
size = 9
font_data = ExtResource( 3 )

[node name="HostMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="BG/CenterContainer"]
margin_left = 156.0
margin_top = 69.0
margin_right = 356.0
margin_bottom = 231.0
rect_min_size = Vector2( 200, 0 )

[node name="Padding00" type="Control" parent="BG/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Title" type="Label" parent="BG/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Host Game"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="BG/CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 31, -28 )
columns = 2

[node name="ULabel" type="Label" parent="BG/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 48.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Username"

[node name="Username" type="LineEdit" parent="BG/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 52.0
margin_right = 200.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = ExtResource( 5 )
placeholder_text = "Godette"

[node name="PLabel" type="Label" parent="BG/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 28.0
margin_right = 48.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "Port"

[node name="Port" type="LineEdit" parent="BG/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 52.0
margin_top = 23.0
margin_right = 200.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "25565"
placeholder_text = "25565"

[node name="CharacterSelector" type="OptionButton" parent="BG/CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 200.0
margin_bottom = 112.0
theme = SubResource( 5 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 5 )
text = "Select Character"

[node name="HostBTN" type="Button" parent="BG/CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 200.0
margin_bottom = 135.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Host"

[node name="Padding01" type="Control" parent="BG/CenterContainer/VBoxContainer"]
margin_top = 139.0
margin_right = 200.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 10 )

[node name="ErrorLabel" type="Label" parent="BG/CenterContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 200.0
margin_bottom = 162.0
custom_colors/font_color = Color( 1, 0.407843, 0.407843, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1
autowrap = true

[node name="BackBTN" type="Button" parent="BG"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 29.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 6 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Back"

[connection signal="pressed" from="BG/CenterContainer/VBoxContainer/HostBTN" to="." method="_on_HostBTN_pressed"]
[connection signal="pressed" from="BG/BackBTN" to="." method="_on_BackBTN_pressed"]
